// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MagellanAI's checkout destination action: all fields 1`] = `
Object {
  "currency": "ISK",
  "discountCode": "tsbfmW@",
  "id": "tsbfmW@",
  "lineItems": Array [
    Object {
      "productId": "tsbfmW@",
      "productName": "tsbfmW@",
      "productType": "tsbfmW@",
      "productVendor": "tsbfmW@",
      "quantity": -60083978287185.92,
      "value": -60083978287185.92,
      "variantId": "tsbfmW@",
      "variantName": "tsbfmW@",
    },
  ],
  "quantity": -60083978287185.92,
  "token": "tsbfmW@",
  "value": -60083978287185.92,
}
`;

exports[`Testing snapshot for MagellanAI's checkout destination action: required fields 1`] = `
Object {
  "currency": "ISK",
  "id": "tsbfmW@",
  "token": "tsbfmW@",
  "value": -60083978287185.92,
}
`;
